# emglken

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.sh  docker-compose.yml  eslint.config.js  package-lock.json  package.json  versions.json
.github/workflows/: build-and-test.yml
emglken/: Makefile  README.txt  cgdate.c  cgunicod.c  common.cmake  emgiten.c  emglken.c  emglken.h  emglken_dispatch.js  emglken_synclist.json  emglken_vm.js  emglulxeen.c  emglulxeen.h  gi_blorb.c  gi_blorb.h  gi_dispa.c  gi_dispa.h  git-whitelist.json  git.js  glk.h  glulxe-profiler.js  glulxe-whitelist.json  glulxe.js  hugo-whitelist.json  hugo.js  library.js  main.c  rgevent.c  rgfref.c  rggestal.c  rgmisc.c  rgschan.c  rgstream.c  rgstyle.c  rgwin_blank.c  rgwin_blank.h  rgwin_buf.c  rgwin_buf.h  rgwin_graph.c  rgwin_graph.h  (+5 more)
emglken/include/: create_fake_stream.js  vm.js
git/: Makefile  emgiten.c  emgiten.h  post.js  pre.js
src/: Dockerfile  asyncglk.ts  asyncify-remove-list-bocfel-noz6.txt  asyncify-remove-list-bocfel.txt  bocfel.js  build.sh  cgunicod.c  common.cmake  emglkenfs.js  emglkenfs.mjs  getc.c  git.js  glk.h  glulxe.js  glulxe.mjs  hugo.js  index.js  preamble.js  scare.js  tads.js  vm.js  vm.mjs
tests/: Hamper.taf.regtest  advent.ulx.regtest  advent.z5.regtest  colossal.hex  colossal.hex.regtest  coretest.hex.regtest  coretest.regtest  ditch.gam  ditch.gam.license  ditch.gam.regtest  ditch3.t3  ditch3.t3.regtest  gi_dispa.js  git.js  glulxe.js  glulxercise-bundled.regtest  glulxercise-profiler.regtest  glulxercise.regtest  hugo.js  praxix.z5.regtest  regtest.py  runtests.sh  testvm  testvm.mjs
tools/: write-file-sizes.js
